[package]
name = "wf_collector_rs"
description = "UDP and WebSocket data collector for WeatherFlow Smart Weather stations."
license = "BSD-3-Clause"
version = "0.2.1"
authors = ["Jason Fritcher <jkf@wolfnet.org>"]
edition = "2024"

[dependencies]
log = "0.4"
simple_logger = "5.2.0"

tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.26"
futures = "0.3.26"
futures-util = "0.3.26"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"

reqwest = "0.13"
tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }

bytes = "1"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
getopts = "0.2.21"
rumqttc = { version = "0.25.1", default-features = false, features = ["use-native-tls"] }
url = "2.3.1"
